--- a/presenter/src/assets/scss/imports/_config.scss
+++ b/presenter/src/assets/scss/imports/_config.scss
@@ -44,8 +44,8 @@ $main-button-third-bg: $color-grey-300;
 $main-button-fourth-bg: $color-blue-200;
 $main-button-fourth-bg-hover-transition-start: $color-blue-300;
 $main-button-fourth-bg-hover-transition-end: $primary-color-transition;
-$main-button-submit-bg: $color-green;
-$main-button-submit-bg-hover-transition-start: $color-green;
+$main-button-submit-bg: $color-green-100;
+$main-button-submit-bg-hover-transition-start: $color-green-100;
 $main-button-submit-bg-hover-transition-end: $primary-color-transition;
 $main-button-download-bg: $color-blue-300;
 $main-button-download-bg-hover-transition-start: $color-blue-300;
