--- a/presenter/src/assets/scss/imports/_mixins.scss
+++ b/presenter/src/assets/scss/imports/_mixins.scss
@@ -12,7 +12,7 @@
     font-size: $font-size-small;
     font-style: $font-style-normal;
     font-weight: $font-weight-small;
-    line-height: $lint-height-normal;
+    line-height: $line-height-normal;
     color: $font-color-checkbox;
 }
 
@@ -21,7 +21,7 @@
     font-size: $font-size-default;
     font-style: $font-style-normal;
     font-weight: $font-weight-base;
-    line-height: $lint-height-normal;
+    line-height: $line-height-normal;
 }
 
 @mixin footer-font() {
@@ -54,7 +54,7 @@
     font-family: $font-family-default;
     font-size: $font-size-large;
     font-style: $font-style-normal;
-    font-weight: $font-weigt-large;
+    font-weight: $font-weight-large;
     line-height: $line-height-x-larger;
 }
 
