--- a/authentik/media/custom.css
+++ b/authentik/media/custom.css
@@ -16,6 +16,16 @@
 .pf-c-form input[type="email"],
 .pf-c-form input[type="password"] {
   border-radius: 80px;
+  border: 1px solid #3D4753;
+}
+
+.pf-c-form input[type="text"]:focus,
+.pf-c-form input[type="email"]:focus,
+.pf-c-form input[type="password"]:focus {
+  outline: none;
+  border: 1px solid transparent;
+  border-image: linear-gradient(90deg, rgba(240, 150, 48, 1) 0%, rgba(44, 165, 177, 1) 100%) 1;
+  border-radius: 80px;
 }
 
 /* sign in button */
