Change the color of selected field to linear gradient.

--- a/authentik/media/custom.css
+++ b/authentik/media/custom.css
@@ -24,8 +24,8 @@
 .pf-c-form input[type="password"]:focus {
   outline: none;
   border: 1px solid transparent;
-  border-image: linear-gradient(90deg, rgba(240, 150, 48, 1) 0%, rgba(44, 165, 177, 1) 100%) 1;
   border-radius: 80px;
+  background: linear-gradient(white, white) padding-box, linear-gradient(90deg, rgba(240, 150, 48, 1) 0%, rgba(44, 165, 177, 1) 100%) border-box;
 }
 
 /* sign in button */
