Add Circle component and earth icon, use more Vuetify classes

--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -2,3 +2,8 @@
 @import './imports/_fonts';
 @import './imports/_mixins';
 @import './imports/_typo';
+
+
+.border-sm {
+    border-width: .953px !important;
+}
