Set correct primary color

--- a/frontend/src/assets/scss/light.module.scss
+++ b/frontend/src/assets/scss/light.module.scss
@@ -1,6 +1,6 @@
 $background-color: #FFFFFF;
 $surface-color: #FFFFFF;
-$primary-color: #6200EE;
+$primary-color: #f09630;
 $secondary-color: #3D4753;
 $error-color: #B00020;
 $info-color: #2196F3;
