--- a/frontend/src/assets/scss/dark.module.scss
+++ b/frontend/src/assets/scss/dark.module.scss
@@ -1,6 +1,6 @@
 $background-color: #000000;
 $surface-color: #121212;
-$primary-color: #2196f3;
+$primary-color: #f09630;
 $secondary-color: #3D4753;
 $error-color: #f44336;
 $info-color: #2196f3;
