Use border color in UserInfo, fix border color in dark theme

--- a/frontend/src/assets/scss/dark.module.scss
+++ b/frontend/src/assets/scss/dark.module.scss
@@ -6,7 +6,7 @@ $error-color: #f44336;
 $info-color: #2196f3;
 $success-color: #4caf50;
 $warning-color: #ffeb3b;
-$border-color: #ffffff;
+$border-color: #d6dfe9;
 $border-opacity: 1;
 $font-color: #222;
 
