--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -1,9 +1,17 @@
+@forward 'vuetify/settings' with (
+  $borders: (
+    0: 0,
+    null: thin,
+    thin: thin,
+    sm: .953px,
+    md: 2px,
+    lg: 4px,
+    xl: 8px
+  )
+);
+
 @import './imports/_config';
 @import './imports/_fonts';
 @import './imports/_mixins';
 @import './imports/_typo';
 
-
-.border-sm {
-    border-width: .953px !important;
-}
