--- a/frontend/src/assets/scss/dark.module.scss
+++ b/frontend/src/assets/scss/dark.module.scss
@@ -7,8 +7,10 @@ $info-color: #2196f3;
 $success-color: #4caf50;
 $warning-color: #ffeb3b;
 $border-color: #d6dfe9;
-$border-opacity: 1;
+$border-opacity: 0.1;
 $font-color: #222;
+$icon-color: #F5F5F5;
+$icon-background-color: #4A545F;
 
 :export {
     backgroundColor: $background-color;
@@ -22,4 +24,6 @@ $font-color: #222;
     borderColor: $border-color;
     borderOpacity: $border-opacity;
     fontColor: $font-color;
+    iconColor: $icon-color;
+    iconBackgroundColor: $icon-background-color;
 }
