Fix style linting

--- a/frontend/src/assets/scss/light.module.scss
+++ b/frontend/src/assets/scss/light.module.scss
@@ -1,5 +1,5 @@
 $background-color: #F5F5F5;
-$surface-color: #FFFFFF;
+$surface-color: #FFF;
 $primary-color: #f09630;
 $secondary-color: #3D4753;
 $error-color: #B00020;
