Set Helvetica as default font; remove unused fonts and configs

--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -1,4 +1,10 @@
-@import './imports/_config';
+@forward 'vuetify/settings' with (
+  $body-font-family: 'Helvetica'
+);
+
+@import './imports/config';  // TODO Remove and use vuetify variables instead
 @import './imports/_fonts';
-@import './imports/_mixins';
-@import './imports/_typo';
+@import './imports/mixins'; // TODO Remove if not used
+
+// Only used in MainButton. TODO remove and use vuetify variable instead (if MainButton is kept at all?)
+$font-family-default: 'Helvetica', sans-serif;
