--- a/frontend/src/assets/scss/imports/_fonts.scss
+++ b/frontend/src/assets/scss/imports/_fonts.scss
@@ -1,161 +1,24 @@
-/* poppins-100 - latin */
 @font-face {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 100;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-100.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('/src/assets/fonts/Helvetica/HelveticaProRoman.woff2') format('woff2');
+}
 
-  /* poppins-100italic - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: italic;
-    font-weight: 100;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-100italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
+@font-face {
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 700;
+  src: url('/src/assets/fonts/Helvetica/HelveticaProBold.woff2') format('woff2');
+  font-display: swap;
+}
 
-  /* poppins-200 - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 200;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-200.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-200italic - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: italic;
-    font-weight: 200;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-200italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-300 - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 300;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-300italic - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: italic;
-    font-weight: 300;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-300italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-regular - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 400;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-italic - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: italic;
-    font-weight: 400;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-500 - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-500italic - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: italic;
-    font-weight: 500;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-500italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-600 - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-600italic - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: italic;
-    font-weight: 600;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-600italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-700 - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 700;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-700italic - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: italic;
-    font-weight: 700;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-800 - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 800;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-800.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-800italic - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: italic;
-    font-weight: 800;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-800italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-900 - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 900;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
-
-  /* poppins-900italic - latin */
-  @font-face {
-    font-family: Poppins;
-    font-style: italic;
-    font-weight: 900;
-    src: url('/src/assets/fonts/Poppins/poppins-v20-latin-900italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  }
+/* light version */
+@font-face {
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 100;
+  src: url('/src/assets/fonts/Helvetica/HelveticaProLight.woff2') format('woff2');
+  font-display: swap;
+}
