--- a/frontend/src/assets/scss/light.module.scss
+++ b/frontend/src/assets/scss/light.module.scss
@@ -1,5 +1,5 @@
 $background-color: #F5F5F5;
-$surface-color: #FFF;
+$surface-color: #e1e6ed;
 $primary-color: #f09630;
 $secondary-color: #3D4753;
 $error-color: #B00020;
@@ -10,7 +10,9 @@ $border-color: #d6dfe9;
 $border-opacity: 1;
 $font-color: #222;
 $icon-color: #3D4753;
-$icon-background-color: $background-color;
+$icon-background: $background-color;
+$bottom-menu-background: rgb(225 230 237 / 60%);
+$sidebar-background: #E1E6ED;
 
 :export {
     backgroundColor: $background-color;
@@ -25,6 +27,8 @@ $icon-background-color: $background-color;
     borderOpacity: $border-opacity;
     fontColor: $font-color;
     iconColor: $icon-color;
-    iconBackgroundColor: $icon-background-color;
+    iconBackground: $icon-background;
+    bottomMenuBackground: $bottom-menu-background;
+    sidebarBackground: $sidebar-background;
 }
 
