Use modern color syntax

--- a/frontend/src/assets/scss/light.module.scss
+++ b/frontend/src/assets/scss/light.module.scss
@@ -10,9 +10,9 @@ $border-color: #d6dfe9;
 $border-opacity: 1;
 $font-color: #222;
 $icon-color: #3D4753;
-$icon-background: rgb(255, 255, 255);
+$icon-background: rgb(255 255 255);
 $bottom-menu-background: rgb(225 230 237 / 60%);
-$sidebar-background: rgb(225, 230, 237);
+$sidebar-background: rgb(225 230 237);
 
 :export {
     backgroundColor: $background-color;
