TabControl: Deactivate mall, make links functional

--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -19,3 +19,8 @@ $font-family-default: 'Helvetica', sans-serif;
 :root {
   --menu-icon-height: 44px;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
