--- a/frontend/src/assets/scss/dark.module.scss
+++ b/frontend/src/assets/scss/dark.module.scss
@@ -13,6 +13,7 @@ $icon-color: #F5F5F5;
 $icon-background: rgb(61 71 83 / 85%);
 $bottom-menu-background: rgb(78 91 107 / 60%);
 $sidebar-background: rgb(61 71 83 / 60%);
+$dropdown-background-color: #3D4753;
 
 :export {
     backgroundColor: $background-color;
@@ -30,4 +31,5 @@ $sidebar-background: rgb(61 71 83 / 60%);
     iconBackground: $icon-background;
     bottomMenuBackground: $bottom-menu-background;
     sidebarBackground: $sidebar-background;
+    dropdownBackgroundColor: $dropdown-background-color;
 }
